<resources>
    <string name="app_name">SPJJ</string>
    <string name="utama_pentadbir">utamaPentadbir</string>
    <string name="utama_juruteknik">utamaJuruteknik</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tugasan">Tugasan</string>
    <string name="maklumat_aduan"><u>MAKLUMAT ADUAN</u></string>
    <string name="maklumat_tindakan"><u>MAKLUMAT TINDAKAN</u></string>
    <string name="maklumat_pengesahan"><u>MAKLUMAT PENGESAHAN</u></string>
    <string name="set_semula">SET SEMULA</string>
    <string name="lupa">Lupa</string>
    <string name="tarikh_title">Tarikh:</string>
    <string name="masa_title">Masa:</string>
    <string name="logo_syarikat">Logo Syarikat</string>
    <string name="contoh_nombor_telefon">0197485063</string>
    <string name="contoh_jawatan">PENGURUSAN</string>
    <string name="contoh_nama">MOHAMAD NOOR RIDWAN BIN MUSA</string>
    <string name="contoh_masa">09:00:00</string>
    <string name="contoh_id">J001</string>
    <string name="contoh_id_mesin">AS928128</string>
    <string name="contoh_id_laporan">DOC-MAINT-1-RO</string>
    <string name="contoh_tugasan">Selenggara kesemua penghawa dingin yang berada di Bangunan A.</string>
    <string name="contoh_tarikh">09/May/2022</string>
    <string name="emel_pengguna">Email Pengguna</string>
    <string name="arahan_reset_password">Sila berikan emel anda yang ingin ditukarkan kata laluan!</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_tugas">Tambah Tugas</string>
    <string name="menu_profilPengguna">Profil Pengguna</string>
    <string name="menu_lamanUtama">Laman Utama</string>
    <string name="menu_jadualTugasan">Jadual Tugasan</string>
    <string name="menu_daftarTugasan">Daftar Tugasan</string>
    <string name="menu_kemaskiniBuangTugasan">Kemaskini Tugasan</string>
    <string name="menu_akaunPengguna">Akaun Pengguna</string>
    <string name="menu_daftarPengguna">Daftar Pengguna</string>
    <string name="menu_kemaskiniPengguna">Kemaskini Pengguna</string>
    <string name="menu_buangPengguna">Buang Pengguna</string>
    <string name="menu_senaraiAduan">Senarai Aduan</string>
    <string name="menu_laporan">Laporan</string>
    <string name="menu_logKeluar">Log Keluar</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="kata_laluan">Kata Laluan</string>
    <string name="jawatan_pengguna">Pilih Jawatan Pengguna</string>
    <string name="SPJJ">SPJJ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>