<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigasi_juruteknik"
    app:startDestination="@+id/nav_lamanUtamaJuruteknik">

    <fragment
        android:id="@+id/nav_profilPengguna"
        android:name="com.sistempengurusanjabatanjuruteknik.ui.profilPengguna.profilPengguna"
        android:label="@string/menu_profilPengguna"
        tools:layout="@layout/fragment_profil_pengguna" />

    <fragment
        android:id="@+id/nav_lamanUtamaJuruteknik"
        android:name="com.sistempengurusanjabatanjuruteknik.ui.juruteknik.lamanUtama.lamanUtama"
        android:label="@string/menu_lamanUtama"
        tools:layout="@layout/fragment_laman_utama_juruteknik" />

    <fragment
        android:id="@+id/nav_jadualTugasanJuruteknik"
        android:name="com.sistempengurusanjabatanjuruteknik.ui.juruteknik.jadualTugasan.jadualTugasan"
        android:label="@string/menu_jadualTugasan"
        tools:layout="@layout/fragment_jadual_tugasan_juruteknik" />

    <fragment
        android:id="@+id/nav_senaraiAduanJuruteknik"
        android:name="com.sistempengurusanjabatanjuruteknik.ui.juruteknik.senaraiAduan.senaraiAduan"
        android:label="@string/menu_senaraiAduan"
        tools:layout="@layout/fragment_senarai_aduan_juruteknik" />

    <fragment
        android:id="@+id/nav_logKeluar"
        android:name="com.sistempengurusanjabatanjuruteknik.ui.juruteknik.logKeluar.logKeluar"
        android:label="@string/menu_logKeluar"
        tools:layout="@layout/log_keluar"/>
</navigation>