<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setSemulaKataLaluan"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/lockIcon"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:src="@drawable/lock_reset_password"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/lupaWord"
            android:layout_below="@+id/lockIcon"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/lupa"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            />

        <TextView
            android:id="@+id/katalaluanWord"
            android:layout_below="@+id/lupaWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/kata_laluan"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            />

        <TextView
            android:id="@+id/arahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/katalaluanWord"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/arahan_reset_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/arahan"
            android:hint="@string/emel_pengguna"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/ikon_pengguna"
            android:fontFamily="sans-serif-medium"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailPengguna"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="20dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/black"
                android:background="#F6F5F5"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/butangSetSemula"
            android:layout_width="200dp"
            android:layout_height="85dp"
            android:layout_below="@id/layout1"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/set_semula"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:backgroundTint="@color/tema"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:ignore="MissingConstraints"
            />
    </RelativeLayout>



</RelativeLayout>